--- a/WebApplication6/packages.config
+++ b/WebApplication6/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
+  <package id="Confluent.Kafka" version="1.4.4" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="jQuery" version="3.7.0" targetFramework="net472" />
+  <package id="librdkafka.redist" version="1.4.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net472" />
