--- a/WebApplication6/Web.config
+++ b/WebApplication6/Web.config
@@ -58,6 +58,30 @@
 			</authorization>
 		</system.web>
 	</location>
+	<location path="AboutMeExamples.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+				<!-- Разрешает доступ всем пользователям -->
+			</authorization>
+		</system.web>
+	</location>
+	<location path="PlatformAgreement.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+				<!-- Разрешает доступ всем пользователям -->
+			</authorization>
+		</system.web>
+	</location>
+	<location path="RiskAwarenessTest.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+				<!-- Разрешает доступ всем пользователям -->
+			</authorization>
+		</system.web>
+	</location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
