--- a/WebApplication6/WebApplication6.csproj
+++ b/WebApplication6/WebApplication6.csproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="AboutMeExamples.aspx" />
     <Content Include="BusinessDefault.aspx" />
     <Content Include="ContactDefault.aspx" />
     <Content Include="ContactForBusiness.aspx" />
@@ -182,8 +183,10 @@
     <Content Include="OrderDetailsForInvestor.aspx" />
     <Content Include="OrdersForBusiness.aspx" />
     <Content Include="OrdersForInvestor.aspx" />
+    <Content Include="PlatformAgreement.aspx" />
     <Content Include="RegisterBusiness.aspx" />
     <Content Include="RegisterInvestor.aspx" />
+    <Content Include="RiskAwarenessTest.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -247,6 +250,13 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutMeExamples.aspx.cs">
+      <DependentUpon>AboutMeExamples.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AboutMeExamples.aspx.designer.cs">
+      <DependentUpon>AboutMeExamples.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
@@ -328,6 +338,10 @@
     <Compile Include="Migrations\202503091145250_InitialCreate4.Designer.cs">
       <DependentUpon>202503091145250_InitialCreate4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503211410334_InitialCreate5.cs" />
+    <Compile Include="Migrations\202503211410334_InitialCreate5.Designer.cs">
+      <DependentUpon>202503211410334_InitialCreate5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Business.cs" />
     <Compile Include="Models\Investment.cs" />
@@ -373,6 +387,13 @@
     <Compile Include="OrdersForInvestor.aspx.designer.cs">
       <DependentUpon>OrdersForInvestor.aspx</DependentUpon>
     </Compile>
+    <Compile Include="PlatformAgreement.aspx.cs">
+      <DependentUpon>PlatformAgreement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PlatformAgreement.aspx.designer.cs">
+      <DependentUpon>PlatformAgreement.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterBusiness.aspx.cs">
       <DependentUpon>RegisterBusiness.aspx</DependentUpon>
@@ -387,6 +408,13 @@
     </Compile>
     <Compile Include="RegisterInvestor.aspx.designer.cs">
       <DependentUpon>RegisterInvestor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="RiskAwarenessTest.aspx.cs">
+      <DependentUpon>RiskAwarenessTest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RiskAwarenessTest.aspx.designer.cs">
+      <DependentUpon>RiskAwarenessTest.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -447,6 +475,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503091145250_InitialCreate4.resx">
       <DependentUpon>202503091145250_InitialCreate4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503211410334_InitialCreate5.resx">
+      <DependentUpon>202503211410334_InitialCreate5.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
